testsuite/tests/llvm/should_fail/all.T
# Tests for LLVM code generator

def f( name, opts ):
  opts.only_ways = ['optllvm', 'llvm', 'debugllvm']

setTestOpts(f)

test('T8131', cmm_src, compile_fail, [''])
